--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^6.2.0",
+    "css-loader": "2.1.1",
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "style-loader": "^3.1.0",
+    "style-loader": "0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.2",
