--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "dev": "webpack --config webpack.dev.js",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,6 +49,7 @@
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "0.6.0",
     "style-loader": "0.23.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.10",
