--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "D": "^1.0.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,7 +19,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "dev": "webpack --config webpack.dev.js",
+    "dev": "react-scripts start",
     "build": "webpack --config webpack.dev.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,17 +45,17 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-react": "^7.14.5",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "8.1.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "2.1.1",
     "file-loader": "^6.2.0",
     "happypack": "^5.0.1",
-    "html-webpack-plugin": "^5.3.2",
+    "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.6.0",
     "style-loader": "0.23.1",
-    "webpack": "^4.29.6",
+    "webpack": "4.44.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "3.11.1",
     "webpack-merge": "^5.8.0"
   }
 }
